--- a/studyproject/basetemplates/basesimple.html
+++ b/studyproject/basetemplates/basesimple.html
@@ -4,23 +4,15 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-<!--    @font-face {-->
-<!--         font-family: 'MaplestoryOTFBold';-->
-<!--         src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/MaplestoryOTFBold.woff') format('woff');-->
-<!--         font-weight: normal;-->
-<!--         font-style: normal;-->
-<!--    }-->
-<!--    * {-->
-<!--       font-family: 'MaplestoryOTFBold';-->
-<!--    }-->
-
-    @font-face {
-        font-family: 'NanumBarunGothic';
-        src: url('/fonts/NanumBarunGothic.eot');
-        src: url('/fonts/NanumBarunGothic.eot') format('embedded-opentype'),
-        url('/fonts/NanumBarunGothic.woff') format('woff');
-        }
-
+@font-face {
+    font-family: 'GowunBatang-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/GowunBatang-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+* {
+   font-family: 'GowunBatang-Regular';
+}
     {% block mycss %}{% endblock %}
     </style>
 </head>
